# baseball_analytics

./: Cargo.toml  batters.csv  sqldb.db
src/: main.rs
