[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
rusqlite = "0.27.0"
serde = { version = "1.0.137", features = ["derive"] }
streaming-stats = "0.2.3"
